deploy/k8s/overlays/kind/delete-ingresses-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-api
  namespace: ai-gateway
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-stream
  namespace: ai-gateway
$patch: delete
